<resources>
    <string name="app_name">BepawsomeDos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name de la persona</string>
    <string name="nav_header_subtitle">maildelapersona@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_publicacion">Publicacion</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="select_breed">Selecciona Raza</string>
</resources>