<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bepawsomedos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.bepawsomedos.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.bepawsomedos.ui.adopcion.AdopcionFragment"
        android:label="@string/menu_adopcion"
        tools:layout="@layout/fragment_adopcion" />

    <fragment
        android:id="@+id/nav_publicacion"
        android:name="com.example.bepawsomedos.ui.publicacion.PublicacionFragment"
        android:label="@string/menu_publicacion"
        tools:layout="@layout/fragment_publicacion" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.bepawsomedos.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />

</navigation>